# mewgenics-bigger-wallet

./: CMakeLists.txt  README.md  build.bat  description.json
src/: BiggerWallet.c  BiggerWallet.h
